<resources>
    <string name="app_name">DevsConnect</string>
    <string name="recruit">DevsConnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finalist">Finalist</string>
    <string name="are_you_a_finalist_looking_for_your_dream_job_apply_to_create_a_unique_career_profile">Are you a Finalist looking for your dream job? Apply to create a unique career profile.</string>
    <string name="apply">Apply</string>
    <string name="are_you_an_employer_looking_to_hire_graduates_with_proficient_skills">Are you an Employer looking to hire Graduates with proficient skills?</string>
    <string name="hire">Hire</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="lo_gin">Login</string>
    <string name="email_address">Email address</string>
    <string name="_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="createaccount">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_addres">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="create_account1">Create Account</string>
    <string name="position_in_company">Position in Company</string>
    <string name="workplace_email">Workplace Email</string>
    <string name="full_name2">Full Name</string>
    <string name="password2">Password</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="next">Next</string>
    <string name="company_name">Company Name</string>
    <string name="company_information">Company Information</string>
    <string name="company_name2">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="company_website">Company Website</string>
    <string name="create_account2">Create Account</string>
    <string name="already_having_an_account">Already having an account?</string>
    <string name="login2">Login</string>
    <string name="verify_account">Verify Account</string>
    <string name="please_enter_the_4_digit_code_sent_to_you_email">Please enter the 4 digit code sent to you email</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code?</string>
    <string name="phone_number">Phone Number</string>
    <string name="reset_password">Reset Password?</string>
    <string name="reset_passwordbtn">Reset Password</string>
    <string name="a_password_reset_link_has_been_sent_to_your_email_address">A Password Reset Link has been sent to your Email address</string>
    <string name="follow_the_instructions_on_the_link_to_reset_your_password">Follow the instructions on the link to reset your password</string>
    <string name="close">Close</string>


    <string-array name="spinner_entries">
        <item>I am a</item>
        <item>Front-end Developer</item>
        <item>Back-end Developer</item>
        <item>Full Stack Developer</item>
        <item>Mobile Developer</item>
        <item>UI/UX Developer</item>
    </string-array>

    <string-array name="login_type">
        <item>Employer</item>
        <item>Developer</item>
    </string-array>
</resources>